--- a/.github/workflows/build-macos-sdks.yml
+++ b/.github/workflows/build-macos-sdks.yml
@@ -1,140 +1,11 @@
-# .github/workflows/build-macos-sdks.yml
-# macOS build using SDK archives hosted in the repo's sdks branch.
-
-name: Build - macOS (sdks)
+name: Disabled - Build - macOS (sdks)
 
 on:
-  push:
-    branches: ["main", "dev"]
   workflow_dispatch:
 
 jobs:
-  build:
+  skip:
+    if: ${{ false }}
     runs-on: macos-latest
     steps:
-      - name: 1. Checkout Code (with submodules)
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: 2. Detect ULTRALIGHT_SDK_URL from repo sdks branch (macOS)
-        id: detect_url
-        shell: bash
-        run: |
-          set -euo pipefail
-          if [ -n "${ULTRALIGHT_SDK_URL:-}" ]; then
-            echo "ULTRALIGHT_SDK_URL already provided: $ULTRALIGHT_SDK_URL"
-            exit 0
-          fi
-          HEADER="samples/Ultralight-WebBrowser/data/include/Ultralight/Defines.h"
-          if [ ! -f "$HEADER" ]; then
-            echo "Header not found at $HEADER, skipping auto-detect." >&2
-            exit 0
-          fi
-          VERSION=$(sed -n 's/^#define[[:space:]]\+ULTRALIGHT_VERSION[[:space:]]\+"\([^"]\+\)".*/\1/p' "$HEADER" | head -n1)
-          if [ -z "$VERSION" ]; then
-            echo "Could not determine ULTRALIGHT_VERSION from $HEADER, skipping auto-detect."
-            exit 0
-          fi
-          BASE_RAW="https://raw.githubusercontent.com/${{ github.repository }}/sdks/sdks"
-          echo "Detected ULTRALIGHT_VERSION=$VERSION; trying common macOS SDK URLs under $BASE_RAW"
-          candidates=(
-            "$BASE_RAW/ultralight-free-sdk-$VERSION-mac-x64.zip"
-            "$BASE_RAW/ultralight-free-sdk-$VERSION-mac-universal.zip"
-            "$BASE_RAW/ultralight-free-sdk-$VERSION-macos-x64.zip"
-            "$BASE_RAW/ultralight-free-sdk-$VERSION-mac-x64.tar.xz"
-          )
-          found=""
-          for url in "${candidates[@]}"; do
-            if curl -fsI "$url" >/dev/null 2>&1; then
-              found="$url"; break
-            fi
-          done
-          if [ -n "$found" ]; then
-            echo "Auto-detected ULTRALIGHT_SDK_URL=$found"
-            echo "ULTRALIGHT_SDK_URL=$found" >> "$GITHUB_ENV"
-            echo "url=$found" >> "$GITHUB_OUTPUT"
-          else
-            echo "::error::Could not auto-detect a valid macOS SDK URL in sdks branch for version $VERSION."
-            exit 1
-          fi
-
-      - name: 3. Prepare Ultralight SDK (macOS)
-        id: prep_sdk
-        shell: bash
-        run: |
-          set -euo pipefail
-          ROOT_DEFAULT="${{ github.workspace }}/samples/Ultralight-WebBrowser/data"
-          ROOT="${ULTRALIGHT_SDK_ROOT:-}"
-          if [ -z "$ROOT" ]; then ROOT="$ROOT_DEFAULT"; fi
-          echo "Initial ULTRALIGHT_SDK_ROOT candidate: $ROOT"
-          present="false"
-          if [ -d "$ROOT/include" ] && ls "$ROOT/lib"/*.dylib >/dev/null 2>&1; then
-            present="true"
-          elif [ -n "${ULTRALIGHT_SDK_URL:-}" ]; then
-            echo "Downloading Ultralight SDK from ULTRALIGHT_SDK_URL=$ULTRALIGHT_SDK_URL"
-            mkdir -p "$RUNNER_TEMP/sdk"
-            pkg="$RUNNER_TEMP/ultralight-sdk"
-            curl -L "$ULTRALIGHT_SDK_URL" -o "$pkg"
-            mkdir -p "$RUNNER_TEMP/sdk-extract"
-            if echo "$ULTRALIGHT_SDK_URL" | grep -Ei '\\.(tar\\.(xz|gz)|txz)$' >/dev/null; then
-              tar -xvf "$pkg" -C "$RUNNER_TEMP/sdk-extract"
-            elif echo "$ULTRALIGHT_SDK_URL" | grep -Ei '\\.zip$' >/dev/null; then
-              unzip -q "$pkg" -d "$RUNNER_TEMP/sdk-extract"
-            else
-              echo "Unknown SDK archive format for: $ULTRALIGHT_SDK_URL" >&2; exit 1
-            fi
-            ROOT_FOUND=""
-            while IFS= read -r -d '' dir; do
-              if [ -d "$dir/include" ] && [ -d "$dir/lib" ]; then ROOT_FOUND="$dir"; break; fi
-            done < <(find "$RUNNER_TEMP/sdk-extract" -mindepth 1 -maxdepth 3 -type d -print0)
-            if [ -n "$ROOT_FOUND" ]; then
-              ROOT="$ROOT_FOUND"; present="true"
-            fi
-          fi
-          echo "present=$present" >> "$GITHUB_OUTPUT"
-          if [ "$present" = "true" ]; then
-            echo "Using ULTRALIGHT_SDK_ROOT=$ROOT"
-            echo "ULTRALIGHT_SDK_ROOT=$ROOT" >> "$GITHUB_ENV"
-          else
-            echo "::error::Ultralight macOS SDK not found. Ensure sdks branch contains a valid archive or set ULTRALIGHT_SDK_ROOT/ULTRALIGHT_SDK_URL."
-            exit 1
-          fi
-
-      - name: 4. Configure CMake (Xcode)
-        if: steps.prep_sdk.outputs.present == 'true'
-        run: cmake -S . -B build -DULTRALIGHT_SDK_ROOT="$ULTRALIGHT_SDK_ROOT"
-
-      - name: 5. Build Project (Release)
-        if: steps.prep_sdk.outputs.present == 'true'
-        run: cmake --build build --config Release --parallel
-
-      - name: 6. Archive Artifacts
-        if: steps.prep_sdk.outputs.present == 'true'
-        shell: bash
-        run: |
-          set -euo pipefail
-          candidates=(
-            "build/Release"
-            "build/bin/Release"
-            "build/Ultralight-WebBrowser/Release"
-            "build/samples/Ultralight-WebBrowser/Release"
-          )
-          src=""
-          for p in "${candidates[@]}"; do
-            if [ -d "$p" ]; then src="$p"; break; fi
-          done
-          if [ -z "$src" ]; then
-            echo "No expected output folder found. Checked: ${candidates[*]}" >&2
-            exit 1
-          fi
-          echo "Archiving from: $src"
-          cd "$src"
-          zip -r ../../../ultralight-macos.zip .
-
-      - name: 7. Upload Artifact
-        if: steps.prep_sdk.outputs.present == 'true'
-        uses: actions/upload-artifact@v4
-        with:
-          name: ultralight-macos-build
-          path: ultralight-macos.zip
+      - run: echo "This workflow is disabled (replaced by build-macos.yml)."
