--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -39,6 +39,7 @@ jobs:
           BASE_RAW="https://raw.githubusercontent.com/${{ github.repository }}/sdks/sdks"
           echo "Detected ULTRALIGHT_VERSION=$VERSION; trying common Linux SDK URLs under $BASE_RAW"
           candidates=(
+            "$BASE_RAW/ultralight-free-sdk-$VERSION-linux-x64.7z"
             "$BASE_RAW/ultralight-free-sdk-$VERSION-linux-x64.tar.xz"
             "$BASE_RAW/ultralight-free-sdk-$VERSION-linux-x64.tar.gz"
             "$BASE_RAW/ultralight-free-sdk-$VERSION-linux-x64.zip"
@@ -58,7 +59,12 @@ jobs:
             exit 1
           fi
 
-      - name: 3. Prepare Ultralight SDK (Linux)
+      - name: 3. Install 7zip (Linux)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y p7zip-full
+
+      - name: 4. Prepare Ultralight SDK (Linux)
         id: prep_sdk
         shell: bash
         run: |
@@ -76,7 +82,13 @@ jobs:
             pkg="$RUNNER_TEMP/ultralight-sdk"
             curl -L "$ULTRALIGHT_SDK_URL" -o "$pkg"
             mkdir -p "$RUNNER_TEMP/sdk-extract"
-            if echo "$ULTRALIGHT_SDK_URL" | grep -Ei '\\.(tar\\.(xz|gz)|txz)$' >/dev/null; then
+            if echo "$ULTRALIGHT_SDK_URL" | grep -Ei '\\.(7z)$' >/dev/null; then
+              # Use available 7zip binary (7z or 7zz)
+              EXTRACTOR=""
+              if command -v 7z >/dev/null 2>&1; then EXTRACTOR=7z; elif command -v 7zz >/dev/null 2>&1; then EXTRACTOR=7zz; fi
+              if [ -z "$EXTRACTOR" ]; then echo "7zip extractor not found" >&2; exit 1; fi
+              "$EXTRACTOR" x -y -o"$RUNNER_TEMP/sdk-extract" "$pkg"
+            elif echo "$ULTRALIGHT_SDK_URL" | grep -Ei '\\.(tar\\.(xz|gz)|txz)$' >/dev/null; then
               tar -xvf "$pkg" -C "$RUNNER_TEMP/sdk-extract"
             elif echo "$ULTRALIGHT_SDK_URL" | grep -Ei '\\.zip$' >/dev/null; then
               unzip -q "$pkg" -d "$RUNNER_TEMP/sdk-extract"
@@ -100,20 +112,20 @@ jobs:
             exit 1
           fi
 
-      - name: 4. Install Linux Dependencies
+      - name: 5. Install Linux Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libnss3-dev libgdk-pixbuf2.0-dev libxtst-dev libxss-dev libdbus-glib-1-dev
 
-      - name: 5. Configure CMake
+      - name: 6. Configure CMake
         if: steps.prep_sdk.outputs.present == 'true'
         run: cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DULTRALIGHT_SDK_ROOT="$ULTRALIGHT_SDK_ROOT"
 
-      - name: 6. Build Project
+      - name: 7. Build Project
         if: steps.prep_sdk.outputs.present == 'true'
         run: cmake --build build --parallel
 
-      - name: 7. Archive Artifacts
+      - name: 8. Archive Artifacts
         if: steps.prep_sdk.outputs.present == 'true'
         shell: bash
         run: |
@@ -136,7 +148,7 @@ jobs:
           cd "$src"
           zip -r ../../ultralight-linux.zip .
 
-      - name: 8. Upload Artifact
+      - name: 9. Upload Artifact
         if: steps.prep_sdk.outputs.present == 'true'
         uses: actions/upload-artifact@v4
         with:
