--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -76,6 +76,12 @@ jobs:
           choco install 7zip -y
           7z -version | Out-Host
 
+      - name: "3.5 Install linters (LLVM clang-format, cppcheck)"
+        shell: pwsh
+        run: |
+          choco install llvm cppcheck -y
+          & "C:\Program Files\LLVM\bin\clang-format.exe" --version | Out-Host
+
       - name: "4. Prepare Ultralight SDK (Windows)"
         id: prep_sdk
         shell: pwsh
@@ -120,11 +126,24 @@ jobs:
         run: |
           cmake --version
           Write-Host "Configuring with ULTRALIGHT_SDK_ROOT=$env:ULTRALIGHT_SDK_ROOT"
-          cmake -S . -B build -DULTRALIGHT_SDK_ROOT="${{ env.ULTRALIGHT_SDK_ROOT }}"
+          cmake -S . -B build -DULTRALIGHT_SDK_ROOT="${{ env.ULTRALIGHT_SDK_ROOT }}" -DBUILD_TESTING=ON
+
+      - name: "5.5 Lint (clang-format) and Static Analysis (cppcheck)"
+        shell: pwsh
+        run: |
+          $files = Get-ChildItem -Path src -Include *.cpp,*.h -File -Recurse | Select-Object -ExpandProperty FullName
+          if ($files) {
+            foreach ($f in $files) { & "C:\Program Files\LLVM\bin\clang-format.exe" -n --Werror $f }
+          } else { Write-Host "No source files found for clang-format check." }
+          cppcheck --version | Out-Host
+          cppcheck --enable=warning,style,performance,portability --inline-suppr --error-exitcode=1 -I "$env:ULTRALIGHT_SDK_ROOT\include" src
 
       - name: "6. Build Project"
         # We specify the 'Release' config at build time
         run: cmake --build build --config Release --parallel
+
+      - name: "6.8 Run tests (ctest)"
+        run: ctest --test-dir build -C Release --output-on-failure
 
       - name: "6.5 Diagnostics: verify runtime contents"
         shell: pwsh
