Fix artifact zip path and cleanup in build workflows
Update Linux and macOS build workflows to archive artifacts directly to $GITHUB_WORKSPACE, remove any existing zip before creation, and avoid changing the working directory. This improves reliability and consistency of artifact generation.

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -322,8 +322,9 @@ jobs:
             fi
           fi
           echo "Archiving from: $src"
-          cd "$src"
-          zip -r ../../../ultralight-macos.zip .
+          dest="$GITHUB_WORKSPACE/ultralight-macos.zip"
+          rm -f "$dest" 2>/dev/null || true
+          (cd "$src" && zip -r "$dest" .)
 
       - name: 8. Upload Artifact
         if: steps.prep_sdk.outputs.present == 'true'
