--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -247,8 +247,9 @@ jobs:
             exit 1
           fi
           echo "Archiving from: $src"
-          cd "$src"
-          zip -r ../../ultralight-linux.zip .
+          dest="$GITHUB_WORKSPACE/ultralight-linux.zip"
+          rm -f "$dest" 2>/dev/null || true
+          (cd "$src" && zip -r "$dest" .)
 
       - name: 9. Upload Artifact
         if: steps.prep_sdk.outputs.present == 'true'
