Add workflow inputs for SDK URL and version override
Introduces 'sdk_url' and 'version' inputs to both Linux and Windows build workflows, allowing manual override of ULTRALIGHT_SDK_URL and ULTRALIGHT_VERSION via workflow_dispatch. This improves flexibility for testing different SDK sources and versions.

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -9,10 +9,20 @@ name: Build - Windows
 on:
   pull_request:
   workflow_dispatch:
+    inputs:
+      sdk_url:
+        description: "Override ULTRALIGHT_SDK_URL (raw .7z in sdks branch)"
+        required: false
+      version:
+        description: "Override ULTRALIGHT_VERSION (eg. 1.4.0)"
+        required: false
 
 jobs:
   build:
     runs-on: windows-latest
+    env:
+      ULTRALIGHT_SDK_URL: ${{ inputs.sdk_url }}
+      ULTRALIGHT_VERSION: ${{ inputs.version }}
 
     steps:
       - name: "1. Checkout Code (with submodules)"
